<resources>
    <string name="title_activity_test">test</string>
    <string name="app_name">CSE110_Project</string>

    // General buttons
    <string name="routesButton">Routes</string>
    <string name="homeButton">Home</string>
    <string name="teamButton">Team</string>
    <string name="mockingButton">DEV</string>
    <string name="startWalkButton">Start Walk</string>
    <string name="stopWalkButton">Stop Walk</string>
    <string name="cancelButton">CANCEL</string>
    <string name="saveButton">Save</string>
    <string name="submitButton">Submit</string>
    <string name="backButton">Back</string>
    <string name="acceptButton">Accept</string>
    <string name="declineButton">Decline</string>

    // General text
    <string name="favText">FAV</string>
    <string name="stepsText">Steps</string>
...
    <string name="emailPrompt">Please enter your preferred Gmail address</string>
    <string name="emailHint">Gmail address</string>
    <string name="invalidEmail">Invalid email. Please try again</string>

    // Height dialog
    <string name="heightHintDialog">Height</string>
    <string name="heightButton">OK</string>
    <string name="heightPrompt">Please enter your height in inches (e.g. 60):</string>
    <string name="heightExplanation">
        Your height will be used to calculate the distance you travel from your steps. Thank you
        for choosing Walk Walk Revolution.
    </string>
    <string name="invalidHeightToast">Invalid height. Please try again</string>
...
    <string name="difficultyHard">Difficult</string>
    <string name="routeNotesPrompt">Enter notes for this route (optional)</string>
    <string name="routeNotesHint">Notes for this route</string>

    // Mocking screen
    <string name="mockingStepsPrompt">Tap to add steps</string>
    <string name="mockingStepsButton">+500</string>
    <string name="mockingTimePrompt">Enter the current time</string>
    <string name="mockingTimeHint">00:00</string>
    <string name="mockingTimeError">Invalid time format. Please try again</string>
    <string name="mockingTimeSuccess">Saved</string>

    // Route details Screen
...
